@@ -50,10 +50,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webmvc</artifactId>
         </dependency>
 
@@ -106,17 +102,11 @@
                 <configuration>
                     <parameters>true</parameters>
                     <release>${java.version}</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -149,7 +139,9 @@
                                         <exclude>org.springframework.data:spring-data-jpa</exclude>
                                         <exclude>org.springframework:spring-webflux</exclude>
                                         <exclude>org.hibernate.orm:*</exclude>
+                                        <exclude>org.hibernate:*</exclude>
                                         <exclude>jakarta.persistence:jakarta.persistence-api</exclude>
+                                        <exclude>javax.persistence:*</exclude>
                                         <exclude>io.projectreactor:*</exclude>
                                         <exclude>io.r2dbc:*</exclude>
                                         <exclude>io.vertx:*</exclude>
@@ -162,18 +154,8 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>--enable-preview</jvmArguments>
-                </configuration>
             </plugin>
         </plugins>
     </build>
